# hackmit25

./: README.md  binary_protocol.py  pyproject.toml
backend/: cerebras_agent.py  demo.py  demo_cerebras_agent.py  dummy_data_generator.py  integration_test.py  main.py  microgrid_optimizer.py  pyproject.toml
frontend/: README.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/metrics/: route.ts
frontend/src/app/metrics/: page.tsx
frontend/src/components/: consumer-manager.tsx  dynamic-nodes-display.tsx  economic-insights.tsx  exploded-diagram.tsx  site-header.tsx  theme-provider.tsx
frontend/src/components/ui/: button.tsx
hardware/: CMakeLists.txt  sdkconfig  test_power_grid.py
hardware/.claude/: settings.local.json
hardware/main/: CMakeLists.txt  binary_protocol.c  binary_protocol.h  power_grid.c  power_grid.h
